Регистрация пользователя fix