@@ -1,12 +1,19 @@
 import lombok.Getter;
 
-import java.util.*;
+import lombok.Getter;
+
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
 
 @Getter
 public class User {
 
-    private static final Set<String> VALID_JOBS = new HashSet<>(Arrays.asList("Google", "Uber", "Amazon"));
-    private static final Set<String> VALID_ADDRESSES = new HashSet<>(Arrays.asList("London", "New York", "Amsterdam"));
+    private static final Set<String> VALID_JOBS = Set.of("Google", "Uber", "Amazon");
+    private static final Set<String> VALID_ADDRESSES = Set.of("London", "New York", "Amsterdam");
 
     private String name;
     private int age;
@@ -30,16 +37,19 @@ public class User {
             throw new IllegalArgumentException("Name is empty");
         }
     }
+
     public static void isYounger(Integer age){
         if(age<18){
             throw new IllegalArgumentException("User is young");
         }
     }
+
     public static void isValidJobs(String company){
         if(!VALID_JOBS.contains(company)) {
             throw new IllegalArgumentException("Company isn't valid");
         }
     }
+
     public static void isValidAddress(String address){
         if(!VALID_ADDRESSES.contains(address)) {
             throw new IllegalArgumentException("Address isn't valid");
@@ -47,15 +57,12 @@ public class User {
     }
 
 
-    private static Map<Integer, List<User>> groupUsers(List<User> arrayUser) {
+    private static Map<Integer, List<User>> groupUsers(List<User> users) {
         Map<Integer, List<User>> arrayUsers = new HashMap<>();
-        for (User elementUser : arrayUser) {
-            if (arrayUsers.containsKey(elementUser.getAge())) {
-                arrayUsers.get(elementUser.getAge()).add(elementUser);
-            } else {
-                arrayUsers.put(elementUser.getAge(), new ArrayList<>());
-                arrayUsers.get(elementUser.getAge()).add(elementUser);
-            }
+        for (User elementUser : users) {
+            List<User> groupedUsers = arrayUsers.getOrDefault(elementUser.getAge(), new ArrayList<>());
+            arrayUsers.put(elementUser.getAge(), groupedUsers);
+            arrayUsers.get(elementUser.getAge()).add(elementUser);
         }
         return arrayUsers;
     }
